feat(dev): replaced memchache module with redis;
- Replaced `memcache` module with `redis`.

--- a/og.info.yml
+++ b/og.info.yml
@@ -70,7 +70,7 @@ install:
   - fontawesome
   - google_analytics
   - honeypot
-  - memcache
+  - redis
   - menu_breadcrumb
   - metatag
   - metatag_dc
