--- a/composer.json
+++ b/composer.json
@@ -49,33 +49,34 @@
         "composer/installers": "^1.9.0",
         "cweagans/composer-patches": "^1.7.0",
         "drupal/core-composer-scaffold": "^9.4.0",
-        "drupal/admin_toolbar": "3.1.0",
+        "drupal/admin_toolbar": "3.4.1",
         "drupal/autologout": "1.4.0",
-        "drupal/bootstrap_layouts": "5.2.0",
+        "drupal/bootstrap_layouts": "5.3.0",
         "drupal/ckeditor_codemirror": "2.4.0",
-        "drupal/console": "1.9.8",
-        "drupal/core": "9.4.7",
+        "drupal/console": "1.9.10",
+        "drupal/core": "9.5.0",
         "drupal/csv_serialization": "2.1.0",
-        "drupal/facets": "2.0.5",
-        "drupal/fontawesome": "2.23.0",
-        "drupal/google_analytics": "3.1.0",
-        "drupal/honeypot": "2.1.1",
+        "drupal/facets": "2.0.6",
+        "drupal/fontawesome": "2.26.0",
+        "drupal/google_analytics": "4.0.2",
+	"drupal/google_tag": "2.0.2",
+        "drupal/honeypot": "2.1.2",
         "drupal/menu_breadcrumb": "1.16.0",
-        "drupal/metatag": "1.21.0",
-        "drupal/password_policy": "3.1.0",
-        "drupal/pathauto": "1.10.0",
-        "drupal/redirect": "1.7.0",
-        "drupal/redis": "1.5",
-        "drupal/search_api": "1.25.0",
-        "drupal/search_api_solr": "4.2.8",
-        "drupal/simple_sitemap": "4.1.2",
-        "drupal/token_filter": "1.4.0",
-        "drupal/views_bootstrap": "4.3.0",
-        "drupal/webform": "6.1.3",
+        "drupal/metatag": "2.0.0",
+        "drupal/password_policy": "4.0.0",
+        "drupal/pathauto": "1.11.0",
+        "drupal/redirect": "1.8.0",
+        "drupal/redis": "1.7",
+        "drupal/search_api": "1.29.0",
+        "drupal/search_api_solr": "4.2.12",
+        "drupal/simple_sitemap": "4.1.6",
+        "drupal/token_filter": "2.0.0",
+        "drupal/views_bootstrap": "4.4.0",
+        "drupal/webform": "6.1.5",
         "drush/drush": "^11.0.0",
-        "fortawesome/font-awesome": "6.1.1",
+        "fortawesome/font-awesome": "6.4.2",
         "oomphinc/composer-installers-extender": "^2.0.0",
-        "opengov/gcweb": "dev-master",
+        "opengov/gcweb": "dev-drupal9-compatibility",
         "symfony/event-dispatcher": "^4.4",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^2.0.0"
