--- a/composer.json
+++ b/composer.json
@@ -49,34 +49,34 @@
         "composer/installers": "^1.9.0",
         "cweagans/composer-patches": "^1.7.0",
         "drupal/core-composer-scaffold": "^10.0.0",
-        "drupal/admin_toolbar": "3.4.1",
+        "drupal/admin_toolbar": "3.4.2",
         "drupal/autologout": "1.4.0",
         "drupal/bootstrap_layouts": "5.3.0",
         "drupal/ckeditor_codemirror": "^3.0@beta",
         "drupal/console": "1.9.10",
         "drupal/core": "10.2.0",
-        "drupal/csv_serialization": "2.1.0",
+        "drupal/csv_serialization": "4.0.0",
         "drupal/facets": "2.0.6",
         "drupal/fontawesome": "2.26.0",
         "drupal/google_analytics": "4.0.2",
 	"drupal/google_tag": "2.0.2",
-        "drupal/honeypot": "2.1.2",
-        "drupal/menu_breadcrumb": "1.16.0",
+        "drupal/honeypot": "2.1.3",
+        "drupal/menu_breadcrumb": "^2.0@alpha",
         "drupal/metatag": "2.0.0",
-        "drupal/password_policy": "3.1.0",
-        "drupal/pathauto": "1.11.0",
-        "drupal/redirect": "1.8.0",
+        "drupal/password_policy": "4.0.0",
+        "drupal/pathauto": "1.12.0",
+        "drupal/redirect": "1.9.0",
         "drupal/redis": "1.7",
-        "drupal/search_api": "1.29.0",
-        "drupal/search_api_solr": "4.2.12",
-        "drupal/simple_sitemap": "4.1.6",
-        "drupal/token_filter": "2.0.0",
+        "drupal/search_api": "1.31.0",
+        "drupal/search_api_solr": "4.3.1",
+        "drupal/simple_sitemap": "4.1.8",
+        "drupal/token_filter": "2.1.0",
         "drupal/views_bootstrap": "4.4.0",
-        "drupal/webform": "6.1.5",
+        "drupal/webform": "6.2.2",
         "drush/drush": "^11.4.0",
         "fortawesome/font-awesome": "6.4.2",
         "oomphinc/composer-installers-extender": "^2.0.0",
-        "opengov/gcweb": "dev-drupal9-compatibility",
+        "opengov/gcweb": "dev-master",
         "symfony/event-dispatcher": "^6.2",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^2.0.0"
