--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         "drush/drush": "^11.4.0",
         "fortawesome/font-awesome": "6.4.2",
         "oomphinc/composer-installers-extender": "^2.0.0",
-        "opengov/gcweb": "dev-master",
+        "opengov/gcweb": "dev-drupal-10",
         "symfony/event-dispatcher": "^6.2",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^2.0.0"
