--- a/og.info.yml
+++ b/og.info.yml
@@ -1,7 +1,7 @@
 name: Open Government
 type: profile
 description: 'Distribution profile for the Open Government project for Government of Canada'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9 || ^10
 
 # Required modules to install to support the profile
 install:
@@ -95,8 +95,6 @@ install:
   - voting_webform
   - webform_resend
 themes:
-  - stable
-  - classy
-  - seven
+  - claro
   - bootstrap
   - gcweb
