--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "opengov/og",
-    "description": "Project template for Drupal 8 Open Government project with composer",
+    "description": "Project template for Drupal Open Government project with composer",
     "type": "drupal-profile",
     "license": "GPL-2.0-or-later",
     "repositories": [
@@ -52,13 +52,12 @@
         "drupal/admin_toolbar": "3.4.2",
         "drupal/autologout": "1.4.0",
         "drupal/bootstrap_layouts": "5.3.0",
-        "drupal/ckeditor_codemirror": "^3.0@beta",
         "drupal/core": "10.2.3",
         "drupal/csv_serialization": "4.0.0",
         "drupal/facets": "2.0.6",
         "drupal/fontawesome": "2.26.0",
         "drupal/google_analytics": "4.0.2",
-	"drupal/google_tag": "2.0.2",
+        "drupal/google_tag": "2.0.2",
         "drupal/honeypot": "2.1.3",
         "drupal/menu_breadcrumb": "^2.0@alpha",
         "drupal/metatag": "2.0.0",
@@ -124,11 +123,6 @@
             "locations": {
                 "web-root": "html/"
             }
-        },
-        "merge-plugin": {
-            "include": [
-                "html/modules/contrib/ckeditor_codemirror/composer.libraries.json"
-            ]
         }
     }
 }
