--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
             "url": "https://packages.drupal.org/8"
         },
         {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        },
+        {
             "type"    : "package",
             "package" : {
                 "name"    : "wet-boew/wet-boew",
