--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
         "drupal/google_analytics": "4.0.2",
         "drupal/google_tag": "2.0.8",
         "drupal/honeypot": "2.1.3",
-        "drupal/menu_breadcrumb": "^2.0@alpha",
+        "drupal/menu_breadcrumb": "2.0.0",
         "drupal/metatag": "2.0.0",
         "drupal/password_policy": "4.0.1",
         "drupal/pathauto": "1.12.0",
