add contrib modules recaptcha_v3 and advanced_email_validation

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "cweagans/composer-patches": "^1.7.0",
         "drupal/core-composer-scaffold": "^10.0.0",
         "drupal/admin_toolbar": "3.4.2",
+        "drupal/advanced_email_validation": "2.0.2",
         "drupal/autologout": "1.4.0",
         "drupal/bootstrap_layouts": "5.3.0",
         "drupal/core": "10.3.13",
@@ -67,6 +68,7 @@
         "drupal/metatag": "2.0.0",
         "drupal/password_policy": "4.0.1",
         "drupal/pathauto": "1.12.0",
+        "drupal/recaptcha_v3": "2.0.4",
         "drupal/redirect": "1.9.0",
         "drupal/redis": "1.7",
         "drupal/search_api": "1.31.0",
