--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,7 @@
         "drupal/token_filter": "2.1.0",
         "drupal/views_bootstrap": "4.4.0",
         "drupal/webform": "6.2.2",
-        "drush/drush": "<12.4.3",
+        "drush/drush": "12.4.3",
         "fortawesome/font-awesome": "6.4.2",
         "oomphinc/composer-installers-extender": "^2.0.0",
         "opengov/gcweb": "dev-master",
