--- a/og.info.yml
+++ b/og.info.yml
@@ -1,7 +1,7 @@
 name: Open Government
 type: profile
 description: 'Distribution profile for the Open Government project for Government of Canada'
-core_version_requirement: ^9 || ^10
+core_version_requirement: ^9 || ^10 || ^11
 
 # Required modules to install to support the profile
 install:
