--- a/modules/custom/og_ext_webform/og_ext_webform.info.yml
+++ b/modules/custom/og_ext_webform/og_ext_webform.info.yml
@@ -1,7 +1,7 @@
 name: 'Open Government Extend Webform'
 description: 'Webform functionality related extensions'
 type: module
-core_version_requirement: ^9 || ^10
+core_version_requirement: ^9 || ^10 || ^11
 package: 'Open Government'
 
 # Required modules
